# Projects

./: _requirements.txt  pyproject.toml
src/thesis/: Input_MIL.py  LR-MIL.py  MIL.py  MIL_stack.py  TCR.r  TCR_repr.py  T_cells.py  cell_embeddings.py  classification_model.py  metadata.py  model.py  patient_level_data.py  pyproject.toml  test.R  testdata_embd.py  testing_NN.py  testing_final.py
