[project]
name = "Thesis"
version = "1.0"
description = "Thesis_scgpt"
authors = [
    {name = "", email = ""},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
